--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: rustup target add x86_64-unknown-linux-musl --toolchain=nightly
         run: rustup target add x86_64-unknown-linux-musl --toolchain=nightly
       - name: apt install musl-tools -y
-        run: apt install musl-tools -y
+        run: sudo apt-get install musl-tools -y
       - name: cargo build
         run: cargo build --release --target=x86_64-unknown-linux-musl
  
